--- a/src/main/resources/templates/usr/member/login.html
+++ b/src/main/resources/templates/usr/member/login.html
@@ -17,4 +17,10 @@
     <div>
         <button type="submit">로그인</button>
     </div>
+
+    <div>
+        <a href="/oauth2/authorization/kakao">
+            카카오로 로그인
+        </a>
+    </div>
 </form>
