프로필 이미지

--- a/src/main/resources/templates/usr/common/layout.html
+++ b/src/main/resources/templates/usr/common/layout.html
@@ -13,13 +13,14 @@
 
 <div>
     <header>
-        <a th:unless="${#authentication.authenticated}" href="/usr/member/login">로그인</a>
-        <a th:if="${#authentication.authenticated}" href="javascript:;"
+        <a th:if="${@rq.logout}" href="/usr/member/login">로그인</a>
+        <a th:if="${@rq.login}" href="javascript:;"
            onclick="this.nextElementSibling.submit();">로그아웃</a>
-        <form hidden th:action="|/usr/member/logout|" method="POST"></form>
+        <form th:if="${@rq.login}"  hidden th:action="|/usr/member/logout|" method="POST"></form>
         <!-- 로그인된 경우에만 보여줄 내용 -->
-        <span th:if="${#authentication.authenticated}">
-            <span th:text="${#authentication.name}"></span>님 환영합니다.
+        <span th:if="${@rq.login}">
+            <span th:text="${#authentication.name}"></span>
+            <img th:if="${@rq.member.profileImgUrl != ''}" width="50" th:src="${@rq.member.profileImgUrl}" alt="">
         </span>
         <!-- 그 외 로그인 된 사용자에게 보여줄 내용 -->
     </header>
